--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://prathameshpawar06.github.io/ArohanaAgro-/",
+  "homepage": "https://prathameshpawar06.github.io/himalayaagro/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
